saint-lascivious.github.io: enlift pre, go amoled
 - use shadow boxing for preformatted text blocks
 - FAFAFA -> FFFFFF
 - 424242 -> 000000

Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/pokedexoverdns.html
 - modified:   265.html
 - modified:   404.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   resources/stylesheets/.formatted/mono.min.css
 - modified:   resources/stylesheets/.formatted/sainternet.min.css
 - modified:   resources/stylesheets/.formatted/table.min.css
 - modified:   resources/stylesheets/mono.min.css
 - modified:   resources/stylesheets/sainternet.min.css
 - modified:   resources/stylesheets/table.min.css

--- a/.formatted/404.html
+++ b/.formatted/404.html
@@ -65,6 +65,8 @@
     <link rel="stylesheet" href="resources/stylesheets/sainternet.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/ribbons.min.css">
     <link rel="stylesheet" href="resources/stylesheets/ribbons.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/shadow-boxing.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/shadow-boxing.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/img.min.css">
     <link rel="stylesheet" href="resources/stylesheets/img.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/mono.min.css">
@@ -109,8 +111,8 @@
     <link rel="preload" as="script" href="resources/javascript/tag_manager.min.js">
     <script type="text/javascript" src="resources/javascript/tag_manager.min.js" defer></script>
 
-    <link rel="prefetch" href="265.html" as="document">
-    <link rel="prerender" href="265.html">
+    <link rel="prefetch" href="404.html" as="document">
+    <link rel="prerender" href="404.html">
 
     <link rel="prefetch" href="index.html" as="document">
     <link rel="prerender" href="index.html">
@@ -219,24 +221,34 @@
             <p>
               National Pokedex
             </p>
-            <pre>dig +short txt 404.pokedex @dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>dig +short txt 404.pokedex @dns.sainternet.xyz</pre>
+            </div>
             <p>
               English US
             </p>
-            <pre>dig +short txt luxio.pokedex @dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>dig +short txt luxio.pokedex @dns.sainternet.xyz</pre>
+            </div>
             <p>
               Nihon
             </p>
-            <pre>dig +short txt luxio.pokedex @dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>dig +short txt luxio.pokedex @dns.sainternet.xyz</pre>
+            </div>
             <p>
               Français
             </p>
-            <pre>dig +short txt luxio.pokedex @dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>dig +short txt luxio.pokedex @dns.sainternet.xyz</pre>
+            </div>
             <p>
               Deutsch
             </p>
-            <pre>dig +short txt luxio.pokedex @dns.sainternet.xyz</pre>
-            <p class="embiggen sainternet-subheader-centered" id="404examplequeryusingdnslookup">
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>dig +short txt luxio.pokedex @dns.sainternet.xyz</pre>
+            </div>
+            <p class="embiggen sainternet-subheader-centered" id="examplequeryusingdnslookup">
               Using dnslookup
             </p>
             <p>
@@ -245,24 +257,34 @@
             <p>
               National Pokédex
             </p>
-            <pre>RRTYPE=TXT dnslookup 404.pokedex dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>RRTYPE=TXT dnslookup 404.pokedex dns.sainternet.xyz</pre>
+            </div>
             <p>
               English US
             </p>
-            <pre>RRTYPE=TXT dnslookup luxio.pokedex dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>RRTYPE=TXT dnslookup luxio.pokedex dns.sainternet.xyz</pre>
+            </div>
             <p>
               Nihon
             </p>
-            <pre>RRTYPE=TXT dnslookup luxio.pokedex dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>RRTYPE=TXT dnslookup luxio.pokedex dns.sainternet.xyz</pre>
+            </div>
             <p>
               Français
             </p>
-            <pre>RRTYPE=TXT dnslookup luxio.pokedex dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>RRTYPE=TXT dnslookup luxio.pokedex dns.sainternet.xyz</pre>
+            </div>
             <p>
               Deutsch
             </p>
-            <pre>RRTYPE=TXT dnslookup luxio.pokedex dns.sainternet.xyz</pre>
-            <p class="embiggen sainternet-subheader-centered" id="404examplequeryusingnslookup">
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>RRTYPE=TXT dnslookup luxio.pokedex dns.sainternet.xyz</pre>
+            </div>
+            <p class="embiggen sainternet-subheader-centered" id="examplequeryusingnslookup">
               Using nslookup
             </p>
             <p>
@@ -271,23 +293,33 @@
             <p>
               National Pokedex
             </p>
-            <pre>nslookup -type=txt 404.pokedex dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>nslookup -type=txt 404.pokedex dns.sainternet.xyz</pre>
+            </div>
             <p>
               English US
             </p>
-            <pre>nslookup -type=txt luxio.pokedex dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>nslookup -type=txt luxio.pokedex dns.sainternet.xyz</pre>
+            </div>
             <p>
               Nihon
             </p>
-            <pre>nslookup -type=txt luxio.pokedex dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>nslookup -type=txt luxio.pokedex dns.sainternet.xyz</pre>
+            </div>
             <p>
               Français
             </p>
-            <pre>nslookup -type=txt luxio.pokedex dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>nslookup -type=txt luxio.pokedex dns.sainternet.xyz</pre>
+            </div>
             <p>
               Deutsch
             </p>
-            <pre>nslookup -type=txt luxio.pokedex dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>nslookup -type=txt luxio.pokedex dns.sainternet.xyz</pre>
+            </div>
           </div>
         </div>
       </main>
