--- a/.formatted/265.html
+++ b/.formatted/265.html
@@ -65,6 +65,8 @@
     <link rel="stylesheet" href="resources/stylesheets/sainternet.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/ribbons.min.css">
     <link rel="stylesheet" href="resources/stylesheets/ribbons.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/shadow-boxing.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/shadow-boxing.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/img.min.css">
     <link rel="stylesheet" href="resources/stylesheets/img.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/mono.min.css">
@@ -217,24 +219,34 @@
             <p>
               National Pokedex
             </p>
-            <pre>dig +short txt 265.pokedex @dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>dig +short txt 265.pokedex @dns.sainternet.xyz</pre>
+            </div>
             <p>
               English US
             </p>
-            <pre>dig +short txt wurmple.pokedex @dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>dig +short txt wurmple.pokedex @dns.sainternet.xyz</pre>
+            </div>
             <p>
               Nihon
             </p>
-            <pre>dig +short txt kemusso.pokedex @dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>dig +short txt kemusso.pokedex @dns.sainternet.xyz</pre>
+            </div>
             <p>
               Français
             </p>
-            <pre>dig +short txt chenipotte.pokedex @dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>dig +short txt chenipotte.pokedex @dns.sainternet.xyz</pre>
+            </div>
             <p>
               Deutsch
             </p>
-            <pre>dig +short txt waumpel.pokedex @dns.sainternet.xyz</pre>
-            <p class="embiggen sainternet-subheader-centered" id="265examplequeryusingdnslookup">
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>dig +short txt waumpel.pokedex @dns.sainternet.xyz</pre>
+            </div>
+            <p class="embiggen sainternet-subheader-centered" id="examplequeryusingdnslookup">
               Using dnslookup
             </p>
             <p>
@@ -243,24 +255,34 @@
             <p>
               National Pokédex
             </p>
-            <pre>RRTYPE=TXT dnslookup 265.pokedex dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>RRTYPE=TXT dnslookup 265.pokedex dns.sainternet.xyz</pre>
+            </div>
             <p>
               English US
             </p>
-            <pre>RRTYPE=TXT dnslookup wurmple.pokedex dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>RRTYPE=TXT dnslookup wurmple.pokedex dns.sainternet.xyz</pre>
+            </div>
             <p>
               Nihon
             </p>
-            <pre>RRTYPE=TXT dnslookup kemusso.pokedex dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>RRTYPE=TXT dnslookup kemusso.pokedex dns.sainternet.xyz</pre>
+            </div>
             <p>
               Français
             </p>
-            <pre>RRTYPE=TXT dnslookup chenipotte.pokedex dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>RRTYPE=TXT dnslookup chenipotte.pokedex dns.sainternet.xyz</pre>
+            </div>
             <p>
               Deutsch
             </p>
-            <pre>RRTYPE=TXT dnslookup waumpel.pokedex dns.sainternet.xyz</pre>
-            <p class="embiggen sainternet-subheader-centered" id="265examplequeryusingnslookup">
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>RRTYPE=TXT dnslookup waumpel.pokedex dns.sainternet.xyz</pre>
+            </div>
+            <p class="embiggen sainternet-subheader-centered" id="examplequeryusingnslookup">
               Using nslookup
             </p>
             <p>
@@ -269,23 +291,33 @@
             <p>
               National Pokedex
             </p>
-            <pre>nslookup -type=txt 265.pokedex dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>nslookup -type=txt 265.pokedex dns.sainternet.xyz</pre>
+            </div>
             <p>
               English US
             </p>
-            <pre>nslookup -type=txt wurmple.pokedex dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>nslookup -type=txt wurmple.pokedex dns.sainternet.xyz</pre>
+            </div>
             <p>
               Nihon
             </p>
-            <pre>nslookup -type=txt kemusso.pokedex dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>nslookup -type=txt kemusso.pokedex dns.sainternet.xyz</pre>
+            </div>
             <p>
               Français
             </p>
-            <pre>nslookup -type=txt chenipotte.pokedex dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>nslookup -type=txt chenipotte.pokedex dns.sainternet.xyz</pre>
+            </div>
             <p>
               Deutsch
             </p>
-            <pre>nslookup -type=txt waumpel.pokedex dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>nslookup -type=txt waumpel.pokedex dns.sainternet.xyz</pre>
+            </div>
           </div>
         </div>
       </main>
