--- a/.formatted/pokedexoverdns.html
+++ b/.formatted/pokedexoverdns.html
@@ -215,23 +215,33 @@
             <p>
               National Pokedex
             </p>
-            <pre>dig +short txt 265.pokedex @dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>dig +short txt 265.pokedex @dns.sainternet.xyz</pre>
+            </div>
             <p>
               English US
             </p>
-            <pre>dig +short txt wurmple.pokedex @dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>dig +short txt wurmple.pokedex @dns.sainternet.xyz</pre>
+            </div>
             <p>
               Nihon
             </p>
-            <pre>dig +short txt kemusso.pokedex @dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>dig +short txt kemusso.pokedex @dns.sainternet.xyz</pre>
+            </div>
             <p>
               Français
             </p>
-            <pre>dig +short txt chenipotte.pokedex @dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>dig +short txt chenipotte.pokedex @dns.sainternet.xyz</pre>
+            </div>
             <p>
               Deutsch
             </p>
-            <pre>dig +short txt waumpel.pokedex @dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>dig +short txt waumpel.pokedex @dns.sainternet.xyz</pre>
+            </div>
             <p class="embiggen sainternet-subheader-centered" id="examplequeryusingdnslookup">
               Using dnslookup
             </p>
@@ -241,23 +251,33 @@
             <p>
               National Pokédex
             </p>
-            <pre>RRTYPE=TXT dnslookup 265.pokedex dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>RRTYPE=TXT dnslookup 265.pokedex dns.sainternet.xyz</pre>
+            </div>
             <p>
               English US
             </p>
-            <pre>RRTYPE=TXT dnslookup wurmple.pokedex dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>RRTYPE=TXT dnslookup wurmple.pokedex dns.sainternet.xyz</pre>
+            </div>
             <p>
               Nihon
             </p>
-            <pre>RRTYPE=TXT dnslookup kemusso.pokedex dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>RRTYPE=TXT dnslookup kemusso.pokedex dns.sainternet.xyz</pre>
+            </div>
             <p>
               Français
             </p>
-            <pre>RRTYPE=TXT dnslookup chenipotte.pokedex dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>RRTYPE=TXT dnslookup chenipotte.pokedex dns.sainternet.xyz</pre>
+            </div>
             <p>
               Deutsch
             </p>
-            <pre>RRTYPE=TXT dnslookup waumpel.pokedex dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>RRTYPE=TXT dnslookup waumpel.pokedex dns.sainternet.xyz</pre>
+            </div>
             <p class="embiggen sainternet-subheader-centered" id="examplequeryusingnslookup">
               Using nslookup
             </p>
@@ -267,23 +287,33 @@
             <p>
               National Pokedex
             </p>
-            <pre>nslookup -type=txt 265.pokedex dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>nslookup -type=txt 265.pokedex dns.sainternet.xyz</pre>
+            </div>
             <p>
               English US
             </p>
-            <pre>nslookup -type=txt wurmple.pokedex dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>nslookup -type=txt wurmple.pokedex dns.sainternet.xyz</pre>
+            </div>
             <p>
               Nihon
             </p>
-            <pre>nslookup -type=txt kemusso.pokedex dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>nslookup -type=txt kemusso.pokedex dns.sainternet.xyz</pre>
+            </div>
             <p>
               Français
             </p>
-            <pre>nslookup -type=txt chenipotte.pokedex dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>nslookup -type=txt chenipotte.pokedex dns.sainternet.xyz</pre>
+            </div>
             <p>
               Deutsch
             </p>
-            <pre>nslookup -type=txt waumpel.pokedex dns.sainternet.xyz</pre>
+            <div class="enlift rounded-corners shadow-boxing">
+              <pre>nslookup -type=txt waumpel.pokedex dns.sainternet.xyz</pre>
+            </div>
             <p class="embiggen sainternet-subheader-centered" id="nationalpokedexunboundconfiguration">
               National Pokédex Unbound Configuration
             </p>
