saint-lascivious.github.io: formatting, accessibility
 - remove a tag text decorations
 - provide tooltips for image alt texts

Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/index.html
 - modified:   .formatted/pokedexoverdns.html
 - modified:   265.html
 - modified:   404.html
 - modified:   index.html
 - modified:   pokedexoverdns.html
 - modified:   resources/stylesheets/.formatted/sainternet.min.css
 - modified:   resources/stylesheets/sainternet.min.css

--- a/.formatted/265.html
+++ b/.formatted/265.html
@@ -190,20 +190,25 @@
             <p>
               Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping.
             </p>
-            <a href="pokedexoverdns.html" class="subterfuge">
-              <picture class="light-mode-img">
-                <source srcset="resources/images/wurmple.webp" type="image/webp">
-                <source srcset="resources/images/wurmple.png" type="image/png">
-                <source srcset="resources/images/wurmple.jpeg" type="image/jpeg">
-                <img src="resources/images/wurmple.jpg" width="480" height="480" alt="Pokémon #265, Wurmple: Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping.">
-              </picture>
-              <picture class="dark-mode-img">
-                <source srcset="resources/images/wurmple-shiny.webp" type="image/webp">
-                <source srcset="resources/images/wurmple-shiny.png" type="image/png">
-                <source srcset="resources/images/wurmple-shiny.jpeg" type="image/jpeg">
-                <img src="resources/images/wurmple-shiny.jpg" width="480" height="480" alt="Pokémon #265, Wurmple: Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping.">
-              </picture>
-            </a>
+            <span id="tooltip-alttext">
+              <a href="pokedexoverdns.html" class="subterfuge">
+                <picture class="light-mode-img">
+                  <source srcset="resources/images/wurmple.webp" type="image/webp">
+                  <source srcset="resources/images/wurmple.png" type="image/png">
+                  <source srcset="resources/images/wurmple.jpeg" type="image/jpeg">
+                  <img src="resources/images/wurmple.jpg" width="480" height="480" alt="Pokémon #265, Wurmple: Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping.">
+                </picture>
+                <picture class="dark-mode-img">
+                  <source srcset="resources/images/wurmple-shiny.webp" type="image/webp">
+                  <source srcset="resources/images/wurmple-shiny.png" type="image/png">
+                  <source srcset="resources/images/wurmple-shiny.jpeg" type="image/jpeg">
+                  <img src="resources/images/wurmple-shiny.jpg" width="480" height="480" alt="Pokémon #265, Wurmple: Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping.">
+                </picture>
+              </a>
+            </span>
+            <span class="mdl-tooltip mdl-tooltip--right" for="tooltip-alttext">
+              Pokémon #265, Wurmple: Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping.
+            <span>
           </div>
         </div>
         <div class="sainternet-container mdl-grid" id="265examplequeries">
