--- a/.formatted/404.html
+++ b/.formatted/404.html
@@ -192,20 +192,25 @@
             <p>
               Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.
             </p>
-            <a href="pokedexoverdns.html" class="subterfuge">
-              <picture class="light-mode-img">
-                <source srcset="resources/images/luxio.webp" type="image/webp">
-                <source srcset="resources/images/luxio.png" type="image/png">
-                <source srcset="resources/images/luxio.jpeg" type="image/jpeg">
-                <img src="resources/images/luxio.jpg" width="480" height="480" alt="Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.">
-              </picture>
-              <picture class="dark-mode-img">
-                <source srcset="resources/images/luxio-shiny.webp" type="image/webp">
-                <source srcset="resources/images/luxio-shiny.png" type="image/png">
-                <source srcset="resources/images/luxio-shiny.jpeg" type="image/jpeg">
-                <img src="resources/images/luxio-shiny.jpg" width="480" height="480" alt="Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.">
-              </picture>
-            </a>
+            <span id="tooltip-alttext">
+              <a href="pokedexoverdns.html" class="subterfuge">
+                <picture class="light-mode-img">
+                  <source srcset="resources/images/luxio.webp" type="image/webp">
+                  <source srcset="resources/images/luxio.png" type="image/png">
+                  <source srcset="resources/images/luxio.jpeg" type="image/jpeg">
+                  <img src="resources/images/luxio.jpg" width="480" height="480" alt="Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.">
+                </picture>
+                <picture class="dark-mode-img">
+                  <source srcset="resources/images/luxio-shiny.webp" type="image/webp">
+                  <source srcset="resources/images/luxio-shiny.png" type="image/png">
+                  <source srcset="resources/images/luxio-shiny.jpeg" type="image/jpeg">
+                  <img src="resources/images/luxio-shiny.jpg" width="480" height="480" alt="Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.">
+                </picture>
+              </a>
+            </span>
+            <span class="mdl-tooltip mdl-tooltip--right" for="tooltip-alttext">
+              Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.
+            <span>
           </div>
         </div>
         <div class="sainternet-container mdl-grid" id="404examplequeries">
