--- a/.formatted/index.html
+++ b/.formatted/index.html
@@ -180,20 +180,25 @@
             <p>
               Take a look around, there's a navigational panel to your left and/or above (desktop and mobile layouts may differ), you may find something that interests you here.
             </p>
-            <a href="pokedexoverdns.html" class="subterfuge">
-              <picture class="light-mode-img">
-                <source srcset="resources/images/wurmple.webp" type="image/webp">
-                <source srcset="resources/images/wurmple.png" type="image/png">
-                <source srcset="resources/images/wurmple.jpeg" type="image/jpeg">
-                <img src="resources/images/wurmple.jpg" width="480" height="480" alt="Image supplied not illustrative, the author is not a Pokémon.">
-              </picture>
-              <picture class="dark-mode-img">
-                <source srcset="resources/images/wurmple-shiny.webp" type="image/webp">
-                <source srcset="resources/images/wurmple-shiny.png" type="image/png">
-                <source srcset="resources/images/wurmple-shiny.jpeg" type="image/jpeg">
-                <img src="resources/images/wurmple-shiny.jpg" width="480" height="480" alt="Image supplied not illustrative, the author is not a Pokémon.">
-              </picture>
-            </a>
+            <span id="tooltip-alttext">
+              <a href="pokedexoverdns.html" class="subterfuge">
+                <picture class="light-mode-img">
+                  <source srcset="resources/images/wurmple.webp" type="image/webp">
+                  <source srcset="resources/images/wurmple.png" type="image/png">
+                  <source srcset="resources/images/wurmple.jpeg" type="image/jpeg">
+                  <img src="resources/images/wurmple.jpg" width="480" height="480" alt="Image supplied not illustrative, the author is not a Pokémon.">
+                </picture>
+                <picture class="dark-mode-img">
+                  <source srcset="resources/images/wurmple-shiny.webp" type="image/webp">
+                  <source srcset="resources/images/wurmple-shiny.png" type="image/png">
+                  <source srcset="resources/images/wurmple-shiny.jpeg" type="image/jpeg">
+                  <img src="resources/images/wurmple-shiny.jpg" width="480" height="480" alt="Image supplied not illustrative, the author is not a Pokémon.">
+                </picture>
+              </a>
+            </span>
+            <span class="mdl-tooltip mdl-tooltip--right" for="tooltip-alttext">
+              Image supplied not illustrative, the author is not a Pokémon.
+            <span>
           </div>
         </div>
       </main>
